# hackmt-2023

./: .env_template  IAmA.csv  Makefile  Music.csv  README.md  TeamInformation4.csv  anaconda-environment.txt  anaconda-requirements.txt  askscience.csv  backend.py  blog.csv  comments.csv  comments.py  first100 (2).csv  folder.py  gaming.csv  gifs.csv  mynewapptest.py  news.csv  pics.csv  posts.csv  posts.py  posts_comments.py  pyproject.toml  reddit_sentiment_analysis.csv  requirements.txt  scores.txt  setup-api.md  streamlit.py  streamlit_app.py  streamlit_app_res.py  streamlit_results.py  test.py  worldnews.csv
.streamlit/: secrets-sample.toml
Parsed-Subreddits/: 4chan.csv  AdviceAnimals.csv  Android.csv  AnimalsBeingBros.csv  AnimalsBeingJerks.csv  Art.csv  AskReddit.csv  Bitcoin.csv  BlackPeopleTwitter.csv  CrappyDesign.csv  DIY.csv  Documentaries.csv  EarthPorn.csv  Eyebleach.csv  Fitness.csv  FoodPorn.csv  Frugal.csv  Futurology.csv  Games.csv  GetMotivated.csv  GifRecipes.csv  HistoryPorn.csv  IAmA.csv  InternetIsBeautiful.csv  Jokes.csv  LifeProTips.csv  Music.csv  NatureIsFuckingLit.csv  OldSchoolCool.csv  OutOfTheLoop.csv  Overwatch.csv  PS4.csv  Showerthoughts.csv  StarWars.csv  Tinder.csv  TwoXChromosomes.csv  Unexpected.csv  UpliftingNews.csv  WTF.csv  Whatcouldgowrong.csv  (+67 more)
aws-infra/: .flake8  .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml
aws-infra/aws_cdk_infrastructure/: hackmt_s3_bucket.py
notebooks/: AlexCode.ipynb  HACK.ipynb  Top100.csv  Top5000_Subreddits.csv  data-store-prototype.ipynb  frontend-starter-notebook.ipynb  lower-case-sub-reddit-names.ipynb  (+6 more)
(+5 files in other folders)
